# kata_ai.meeting_assistant.clever_foxes

./: .env.example  .gitignore  AUDIO_DEVICE_SETUP.md  AUDIO_DEVICE_SETUP.md.backup  CONFIGURATION.md  HYBRID_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  REAL_TIME_INSIGHTS.md  SETUP_VIRTUAL_AUDIO.md  TRANSLATION_GUIDE.md  audio_mixer.py  audio_recorder.py  azure_speech_service.py  config.py  demo.py  epam_style.py  fix_emoji.py  gui_app.py  llm_service.py  main.py  meeting_assistant_service.py  modern_icons.py  private_chat_service.py  prompts.py  pyproject.toml  summary_manager.py  test_app.py  transcription_display.txt  transcription_logger.py  transcription_service.py  translation_tts_controller.py  tts_audio_buffer.py  tts_audio_router.py  tts_voice_manager.py  vad_detector.py  watch_transcriptions.sh
.github/: copilot-instructions.md
services/: __init__.py
services/audio/: __init__.py  audio_mixer.py  audio_recorder.py
services/llm/: __init__.py  meeting_assistant_service.py  private_chat_service.py
services/speech_engine/: __init__.py  azure_speech_service.py
services/speech_engine/stt/: __init__.py  transcription_logger.py  transcription_service.py
services/speech_engine/tts/: __init__.py  translation_tts_controller.py  tts_audio_buffer.py  tts_audio_router.py  tts_voice_manager.py
tests/: test_app.py  test_llm_communicator.py  test_meeting_assistant.py
